# single-cell-analysis-blueprint

./: README.md  pyproject.toml  requirements.txt
.github/actions/check-sysinfo/: action.yml
.github/actions/setup-env/: action.yml
.github/workflows/: notebook_runner.yml
docker/brev/: README.md  docker-compose-nb-2504.yaml  docker-compose-nb-2506-H100-C-nightly.yaml  docker-compose-nb-2506-H100-C.yaml  docker-compose-nb-2506-nightly.yaml  docker-compose-nb-2506.yaml
docs/: bring_your_compute.md  creating_custom_brev.md
notebooks/: 01_scRNA_analysis_preprocessing.ipynb  06_scRNA_analysis_90k_brain_example.ipynb  08_spatial_analysis_autocorrelation.ipynb  README.md
