[project]
name = "single-cell-analysis-blueprint"
version = "0.1.0"
description = ""
authors = [
    {name = "Gary Burnett",email = "gburnett@nvidia.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "wget (==3.2)",
    "rapids-singlecell (==0.12.1)",
    "squidpy (==1.6.4)",
    "zarr (==2.18.*)",
    "jupyterlab (>=4.4.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
