[tool.poetry]
name = "single-cell-analysis-lueprint"
version = "0.1.0"
description = ""
authors = [
    "Gary Burnett <gburnett@nvidia.com>"
]
readme = "README.md"
[tool.poetry.dependencies]
python = ">=3.12,<3.13"
wget = "3.2"
rapids-singlecell = "0.12.1"
squidpy = "1.6.4"
zarr = "2.18.*"
jupyterlab = ">=4.4.3,<5.0.0"


[build-system]
requires = ["poetry-core<=2.0.0"]
build-backend = "poetry.core.masonry.api"

