[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anndata = "^0.11.4"
array-api-compat = "^1.12.0"
contourpy = "^1.3.2"
cycler = "^0.12.1"
fonttools = "^4.58.2"
h5py = "^3.14.0"
imageio = "^2.37.0"
joblib = "^1.5.1"
kiwisolver = "^1.4.8"
lazy-loader = "^0.4"
legacy-api-wrap = "^1.4.1"
llvmlite = "^0.44.0"
matplotlib = "^3.10.3"
natsort = "^8.4.0"
networkx = "^3.5"
numba = "^0.61.2"
pandas = "^2.3.0"
patsy = "^1.0.1"
pillow = "^11.2.1"
pynndescent = "^0.5.13"
scanpy = "^1.11.2"
scikit-learn = "^1.7.0"
scikit-image = "^0.25.2"
scikit-misc = "^0.5.1"
scipy = "^1.15.3"
seaborn = "^0.13.2"
session-info2 = "^0.1.2"
statsmodels = "^0.14.4"
threadpoolctl = "^3.6.0"
tifffile = "^2025.6.1"
tqdm = "^4.67.1"
tzdata = "^2025.2"
umap-learn = "^0.5.7"
wget = "^3.2"
deprecated = "^1.2.18"
numcodecs = "^0.16.1"
wrapt = "^1.17.2"
zarr = "^3.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
